--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ll"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true"
+    tools:context=".MainActivity">
 
-    <com.otaliastudios.zoom.ZoomLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/zl"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical|horizontal"
-        app:transformation="centerInside"
-        app:transformationGravity="auto"
-        app:alignment="center"
-        app:overScrollHorizontal="true"
-        app:overScrollVertical="true"
-        app:overPinchable="true"
-        app:horizontalPanEnabled="true"
-        app:verticalPanEnabled="true"
-        app:zoomEnabled="true"
-        app:flingEnabled="true"
-        app:minZoom="0.7"
-        app:minZoomType="zoom"
-        app:maxZoom="2.5"
-        app:maxZoomType="zoom"
-        app:animationDuration="280"
-        app:hasClickableChildren="true">
+    <include layout="@layout/mycontent" />
+
+    <!-- Adding bottom sheet after main content -->
+    <include layout="@layout/bottom_sheet" />
 
 
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/cl"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/iv_cementerio"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/cartama_plano"
-                android:scaleType="center"/>
-        </android.support.constraint.ConstraintLayout>
-
-
-    </com.otaliastudios.zoom.ZoomLayout>
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
